--- a/ExcelAddInEquipmentDatabase/ExcelAddInEquipmentDatabase.csproj
+++ b/ExcelAddInEquipmentDatabase/ExcelAddInEquipmentDatabase.csproj
@@ -253,11 +253,11 @@
     <Compile Include="Forms\EquiBrowser.Designer.cs">
       <DependentUpon>EquiBrowser.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\ErrorManger.cs">
+    <Compile Include="Forms\ErrorManager.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\ErrorManger.Designer.cs">
-      <DependentUpon>ErrorManger.cs</DependentUpon>
+    <Compile Include="Forms\ErrorManager.Designer.cs">
+      <DependentUpon>ErrorManager.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\MXxQueryEdit.cs">
       <SubType>Form</SubType>
@@ -335,8 +335,8 @@
     <EmbeddedResource Include="Forms\EquiBrowser.resx">
       <DependentUpon>EquiBrowser.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\ErrorManger.resx">
-      <DependentUpon>ErrorManger.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\ErrorManager.resx">
+      <DependentUpon>ErrorManager.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\MXxQueryEdit.resx">
       <DependentUpon>MXxQueryEdit.cs</DependentUpon>
