--- a/EqUiWebUi/EqUiWebUi.csproj
+++ b/EqUiWebUi/EqUiWebUi.csproj
@@ -355,6 +355,9 @@
     <Compile Include="Areas\Tiplife\Models\TipDressLogFile.cs">
       <DependentUpon>TiplifeModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Areas\Tiplife\Models\TipLifeExpectations.cs">
+      <DependentUpon>TiplifeModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Areas\Tiplife\Models\TiplifeModel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -1072,6 +1075,7 @@
     <Content Include="Areas\user_management\Views\AreaFilters\Edit.cshtml" />
     <Content Include="Areas\user_management\Views\AreaFilters\Index.cshtml" />
     <Content Include="Areas\user_management\Views\AreaFilters\_settings.cshtml" />
+    <Content Include="Areas\Tiplife\Views\NgacElectrode\TipLifeExpectations.cshtml" />
     <None Include="fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="MvcGrid\fonts\glyphicons-halflings-regular.eot" />
     <Content Include="MvcGrid\fonts\glyphicons-halflings-regular.svg" />
