--- a/EqUiWebUi/EqUiWebUi.csproj
+++ b/EqUiWebUi/EqUiWebUi.csproj
@@ -863,7 +863,6 @@
     <Content Include="PDFjs\web\locale\locale.properties" />
     <Content Include="PDFjs\web\viewer.js.map" />
     <Content Include="PDFjs\LICENSE" />
-    <Content Include="PDFjs\web\Q-Mapping Dashboard.pdf" />
     <Content Include="Content\MvcGrid\Fonts\GridGlyphs.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
@@ -1113,6 +1112,7 @@
     <Content Include="MvcGrid\fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="MvcGrid\fonts\GridGlyphs.woff" />
     <Content Include="package.json" />
+    <Content Include="PDFjs\web\Q-Mapping Dashboard greenfield.pdf" />
     <None Include="Properties\PublishProfiles\gensvw1178-PRODUCTION.pubxml" />
     <None Include="Properties\PublishProfiles\VCC22700-Testing.pubxml" />
     <Content Include="PDFjs\build\pdf.js" />
