--- a/EqUiWebUi/EqUiWebUi.csproj
+++ b/EqUiWebUi/EqUiWebUi.csproj
@@ -678,6 +678,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\daterangepicker.css" />
+    <Content Include="Content\images\award-winning.png" />
     <Content Include="Content\images\icons8-customer-25.png" />
     <Content Include="Content\images\icons8-home-button-25.png" />
     <Content Include="Content\images\icons8-settings-25.png" />
