--- a/EqUiWebUi/packages.config
+++ b/EqUiWebUi/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net451" />
-  <package id="bootstrap" version="3.3.7" targetFramework="net46" />
+  <package id="bootstrap" version="4.1.1" targetFramework="net46" />
   <package id="Bootstrap.Multiselect" version="0.9.13" targetFramework="net46" />
   <package id="d3" version="5.4.0" targetFramework="net46" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net46" />
@@ -38,6 +38,7 @@
   <package id="NonFactors.Grid.Core.Mvc5" version="4.2.0" targetFramework="net46" />
   <package id="NonFactors.Grid.Mvc5" version="4.2.0" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net451" />
+  <package id="popper.js" version="1.14.0" targetFramework="net46" />
   <package id="Respond" version="1.4.2" targetFramework="net451" />
   <package id="Spin.js" version="2.3.2.1" targetFramework="net46" />
   <package id="System.Spatial" version="5.8.3" targetFramework="net46" />
