--- a/EqUiWebUi/EqUiWebUi.csproj
+++ b/EqUiWebUi/EqUiWebUi.csproj
@@ -690,7 +690,7 @@
     <Content Include="Content\mvc-grid.css" />
     <Content Include="Content\MvcGrid\mvc-grid.css" />
     <Content Include="Content\Site.css" />
-    <Content Include="Content\summernote.css" />
+    <Content Include="Content\summernote-bs4.css" />
     <Content Include="Global.asax" />
     <Content Include="PDFjs\build\pdf.js.map" />
     <Content Include="PDFjs\build\pdf.worker.js.map" />
@@ -1137,6 +1137,7 @@
     <Content Include="Scripts\popper-utils.min.js" />
     <Content Include="Scripts\popper.js" />
     <Content Include="Scripts\popper.min.js" />
+    <Content Include="Scripts\summernote-bs4.js" />
     <Content Include="Scripts\umd\popper-utils.js" />
     <Content Include="Scripts\umd\popper-utils.min.js" />
     <Content Include="Scripts\umd\popper.js" />
@@ -1293,7 +1294,6 @@
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\spin.js" />
     <Content Include="Scripts\spin.min.js" />
-    <Content Include="Scripts\summernote.js" />
     <Content Include="Scripts\tableau-2.0.0.min.js" />
     <Content Include="Scripts\viewer.js" />
     <Content Include="Scripts\_references.js" />
