--- a/EQUICommunictionLib/App.config
+++ b/EQUICommunictionLib/App.config
@@ -4,6 +4,13 @@
     <section name="oracle.manageddataaccess.client"
       type="OracleInternal.Common.ODPMSectionHandler, Oracle.ManagedDataAccess, Version=4.122.1.0, Culture=neutral, PublicKeyToken=89b483f429c47342"/>
     </configSections>
+
+
+  <connectionStrings>
+    <add name="EQUIConnectionString" connectionString="Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Persist Security Info=True;User ID=EqUiAdmin;Password=EqUiAdmin" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
+  
+  
   <system.data>
     <DbProviderFactories>
       <remove invariant="Oracle.ManagedDataAccess.Client"/>
